--- a/Step 1 - ETL CSV To Azure PostgreSQL/Postgres_ELT.ipynb
+++ b/Step 1 - ETL CSV To Azure PostgreSQL/Postgres_ELT.ipynb
@@ -1130,27 +1130,7 @@
     "        cursor.close()\n",
     "        return 1\n",
     "    print(\"execute_values() done\")\n",
-    "    cursor.close()\n",
-    "\"\"\"\n",
-    "def table_recreate(cursor, tableName: str, tableFields: str ):\n",
-    "     \" Takes the Connection , Table name and create Fields, will drop the table if exists and create it again with the desired fields Ex : table_recreate(cursor, payments,\n",
-    "                    \"(sessionId INT,\n",
-    "                    itemInSession INT,\n",
-    "                    artist TEXT,\n",
-    "                    song TEXT,\n",
-    "                    length FLOAT, \n",
-    "                    PRIMARY KEY (sessionId, itemInSession))\")  \"\n",
-    "    try:\n",
-    "        \n",
-    "        cursor.execute(\"DROP TABLE IF EXISTS {0};\".format(tableName))\n",
-    "        query = f\"CREATE TABLE {tableName} \"\n",
-    "        query = query + tableFields\n",
-    "        cursor.execute(query)\n",
-    "        print(\"Finished creating table {0}\".format(tableName))\n",
-    "    except psycopg2.Error as e: \n",
-    "    print(f\"Error: Couldn't recreate the table: {tableName}, something went wrong\")\n",
-    "    print(e)\n",
-    "\"\"\""
+    "    cursor.close()"
    ]
   },
   {
