--- a/Step 2 - Star Schema Test And debug in Azure PostgreSQL/star_test.ipynb
+++ b/Step 2 - Star Schema Test And debug in Azure PostgreSQL/star_test.ipynb
@@ -753,6 +753,70 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "-- Define a temporary table to hold the calendar data\n",
+    "CREATE TEMP TABLE calendar_tmp (\n",
+    "    DateTime TIMESTAMP,\n",
+    "    second SMALLINT,\n",
+    "    minute SMALLINT,\n",
+    "    hour SMALLINT,\n",
+    "    day SMALLINT,\n",
+    "    dayofweek SMALLINT,\n",
+    "    is_weekend BOOLEAN,\n",
+    "    month SMALLINT,\n",
+    "    Quarter SMALLINT,\n",
+    "    Year SMALLINT\n",
+    ");\n",
+    "\n",
+    "-- Insert the calendar data into the temporary table\n",
+    "INSERT INTO calendar_tmp (DateTime, second, minute, hour, day, dayofweek, is_weekend, month, Quarter, Year)\n",
+    "SELECT\n",
+    "DateTime,\n",
+    "EXTRACT(SECOND FROM DateTime) AS second,\n",
+    "EXTRACT(MINUTE FROM DateTime) AS minute,\n",
+    "EXTRACT(HOUR FROM DateTime) AS hour,\n",
+    "EXTRACT(DAY FROM DateTime) AS day,\n",
+    "EXTRACT(DOW FROM DateTime) AS dayofweek,\n",
+    "CASE WHEN EXTRACT(DOW FROM DateTime) > 4 THEN TRUE ELSE FALSE END AS is_weekend,\n",
+    "EXTRACT(MONTH FROM DateTime) AS month,\n",
+    "EXTRACT(QUARTER FROM DateTime) AS Quarter,\n",
+    "EXTRACT(YEAR FROM DateTime) AS Year\n",
+    "FROM\n",
+    "generate_series('1969-01-01 00:00:00'::TIMESTAMP, '2050-12-31 23:59:59'::TIMESTAMP, '1 second'::INTERVAL) AS DateTime;\n",
+    "\n",
+    "-- Create the final table with the calendar data\n",
+    "CREATE TABLE IF NOT EXISTS dimDate (\n",
+    "    DateTime TIMESTAMP PRIMARY KEY,\n",
+    "    second SMALLINT,\n",
+    "    minute SMALLINT,\n",
+    "    hour SMALLINT,\n",
+    "    day SMALLINT,\n",
+    "    dayofweek SMALLINT,\n",
+    "    is_weekend BOOLEAN,\n",
+    "    month SMALLINT,\n",
+    "    Quarter SMALLINT,\n",
+    "    Year SMALLINT\n",
+    ");\n",
+    "\n",
+    "-- Insert the data from the temporary table into the final table\n",
+    "INSERT INTO dimDate (DateTime, second, minute, hour, day, dayofweek, is_weekend, month, Quarter, Year)\n",
+    "SELECT * FROM calendar_tmp;\n",
+    "\n",
+    "-- Clean up the temporary table\n",
+    "DROP TABLE calendar_tmp;\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [],
    "metadata": {
